# AgentCabMobile

./: .gitignore  DEVICE_PROTOCOL.md  PRODUCT_PLAN.md  README.md  aoxia_api_docs.txt  article_mobile_ai_agent.md  article_v2.md  article_v3.md  read_dingtalk.js
app/: App.tsx  app.json  index.js  package-lock.json  package.json
app/android/: gradle.properties  settings.gradle
app/android/app/: build.gradle  proguard-rules.pro
app/android/app/src/main/jni/: CMakeLists.txt  ocr_jni.cpp  ppocrv5.cpp  yolo_icon.cpp
app/ios/: Podfile
app/ios/AgentCab/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
app/ios/AgentCab.xcodeproj/: project.pbxproj
app/ios/AgentCab.xcworkspace/: contents.xcworkspacedata
app/scripts/: postinstall.sh
app/src/assets/: onboardingSvgs.ts
app/src/components/: AppModal.tsx  DownloadButton.tsx  DynamicForm.tsx  ErrorBoundary.tsx  ImagePreview.tsx  LanguagePicker.tsx  Logo3D.tsx  NetworkBanner.tsx  PdfPreview.tsx  PhotoGrid.tsx  PrivacyAgreement.tsx  ReviewCard.tsx  ReviewInput.tsx  ScriptExecutor.tsx  Skeleton.tsx  SkillCard.tsx  SvgIllustration.tsx  TabIcon.tsx  TaskNotification.tsx
app/src/hooks/: useAuth.tsx  useCachedData.ts  useKeyboard.ts  usePinnedApis.ts  useTasks.ts
app/src/i18n/: action.ts  ar.ts  automation.ts  dataCollection.ts  en.ts  index.tsx  ja.ts  permission.ts  privacy.ts  vi.ts  (+3 more)
docs/: CV_SCAFFOLDING.md
references/: DEVELOPMENT_PROGRESS.md  seedance-worker.py  web-api-client.ts
workers/: create_skills.py  update_life_weekly.py  update_life_weekly_v2.py  update_phone_slim.py  update_phone_slim_v2.py
(+108 files in other folders)
